welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:11: error: value Couleurs is not a member of object java.awt.Color
      setCouleurBrosse(Color.Couleurs(i))
                             ^